# whity-core

./: .dockerignore  .env.example  .env.staging.example  .gitignore  ADMIN_PANEL_IMPLEMENTATION_SUMMARY.md  ADMIN_PANEL_TEST_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  GITHUB_ISSUE_COMMENT.md  LICENSE  Makefile  ORGANIZING_AGENT_PROMPT.md  README.md  SECURITY.md  SUPPORT.md  TEST_RESULTS.md  composer.json  dev-server.sh  docker-compose.staging-remote.yml  docker-compose.staging.yml  docker-compose.yml  infection.full.json5  infection.json5  package-lock.json  package.json  phpstan-baseline.neon  phpstan.neon  phpunit.xml  test_effective_roles.php
.changeset/: config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.phpunit.cache/: test-results
.playwright-mcp/: page-2026-05-17T17-50-50-026Z.yml  page-2026-05-17T17-52-13-009Z.yml  page-2026-05-17T17-52-42-690Z.yml  page-2026-05-17T17-54-01-292Z.yml  page-2026-05-17T17-54-24-647Z.yml  page-2026-05-17T17-55-09-920Z.yml  page-2026-05-18T13-27-26-728Z.yml  page-2026-05-18T13-27-37-727Z.yml  page-2026-05-18T13-31-56-069Z.yml  page-2026-05-19T13-47-38-515Z.yml  page-2026-05-19T13-49-12-942Z.yml  page-2026-05-24T08-48-02-532Z.yml  page-2026-05-24T08-48-13-727Z.yml  page-2026-05-24T08-48-45-972Z.yml  (+11 more)
templates/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
templates/tauri-desktop/src-tauri/icons/: icon.icns
templates/tauri-desktop/src-tauri/src/: db.rs  lib.rs  main.rs
templates/tauri-desktop/src-tauri/src/commands/: items.rs  mod.rs  printer.rs
(+1079 files in other folders)
