[package]
name = "whity-tauri-desktop-template"
version = "0.1.0"
description = "Whity Tauri desktop boilerplate: @amroksaleh/ui + @amroksaleh/features wired to real local SQLite, plus a worked example of adding a native-crate command (printing)."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whity_tauri_desktop_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local persistence for the DemoCatalog pilot feature — "bundled" links a
# vendored SQLite (no system libsqlite3-dev needed), matching the "just
# works out of the box" bar this boilerplate is for.
rusqlite = { version = "0.31", features = ["bundled"] }

# The worked "add a crate for custom functionality" example (see
# src/commands/printer.rs): cross-platform printer discovery + printing,
# demonstrating the extension pattern with a real capability the web can't do.
printers = "2"
